Add font preload

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" href="./base/apple.png">
   <meta name="apple-mobile-web-app-title" content="Logux">
   <meta name="description" content="Logux is a client-server communication tool for collaborative web applications with optimistics UI, offline first and live updates">
+  <link rel="preload" href="./kurbanistika/kurbanistika.woff2" type="font">
   <script defer type="module" src="./common.js"></script>
   <script defer type="module" src="./switcher.js"></script>
   <link rel="stylesheet" href="./common.css">
