--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Logux.io UI Kit</title>
+  <title>Logux.org UI Kit</title>
   <meta name="viewport" content="width=device-width">
   <link rel="icon" href="./base/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./base/apple.png">
